samples/_failures_safe/1761666475_ab0c73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_473d993e.c: In function ‘main’:
./samples/SAFE/__tmp_473d993e.c:127: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_473d993e.c:126:5: error: expected declaration or statement at end of input
  126 |     if
      |     ^~
